Assignment2/lab1-testsuite-larger/lab1-test-dir/ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParCPP.y
-----------------------------------------------------------------------------

state 43 contains 1 shift/reduce conflicts.
state 47 contains 1 shift/reduce conflicts.
state 48 contains 2 shift/reduce conflicts.
state 51 contains 1 shift/reduce conflicts.
state 151 contains 1 shift/reduce conflicts.
state 152 contains 1 shift/reduce conflicts.
state 212 contains 1 shift/reduce conflicts.
state 213 contains 1 shift/reduce conflicts.
state 233 contains 1 reduce/reduce conflicts.
state 251 contains 4 shift/reduce conflicts.
state 256 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pArg -> Arg                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pStm -> Stm                                 (5)
	%start_pListStm -> ListStm                         (6)
	%start_pType -> Type                               (7)
	%start_pListType -> ListType                       (8)
	%start_pQConst -> QConst                           (9)
	%start_pName -> Name                               (10)
	%start_pListName -> ListName                       (11)
	%start_pExp16 -> Exp16                             (12)
	%start_pExp15 -> Exp15                             (13)
	%start_pExp14 -> Exp14                             (14)
	%start_pExp13 -> Exp13                             (15)
	%start_pExp12 -> Exp12                             (16)
	%start_pExp11 -> Exp11                             (17)
	%start_pExp10 -> Exp10                             (18)
	%start_pExp9 -> Exp9                               (19)
	%start_pExp8 -> Exp8                               (20)
	%start_pExp4 -> Exp4                               (21)
	%start_pExp3 -> Exp3                               (22)
	%start_pExp2 -> Exp2                               (23)
	%start_pExp1 -> Exp1                               (24)
	%start_pExp -> Exp                                 (25)
	%start_pExp5 -> Exp5                               (26)
	%start_pExp6 -> Exp6                               (27)
	%start_pExp7 -> Exp7                               (28)
	%start_pListExp -> ListExp                         (29)
	%start_pListExp2 -> ListExp2                       (30)
	%start_pListExp11 -> ListExp11                     (31)
	%start_pListId -> ListId                           (32)
	Integer -> L_integ                                 (33)
	Double -> L_doubl                                  (34)
	String -> L_quoted                                 (35)
	Char -> L_charac                                   (36)
	Id -> L_Id                                         (37)
	Program -> ListDef                                 (38)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (39)
	Def -> 'inline' Type Id '(' ListArg ')' '{' ListStm '}'   (40)
	Def -> 'inline' Type Id '(' ListArg ')' ';'        (41)
	Def -> Type ListId ';'                             (42)
	Def -> 'using' QConst ';'                          (43)
	Def -> Type Id '(' ListType ')' ';'                (44)
	Def -> Type 'main' '(' ListArg ')' '{' ListStm '}'   (45)
	ListDef ->                                         (46)
	ListDef -> ListDef Def                             (47)
	Arg -> Type Id                                     (48)
	ListArg ->                                         (49)
	ListArg -> Arg                                     (50)
	ListArg -> Arg ',' ListArg                         (51)
	Stm -> Exp ';'                                     (52)
	Stm -> Type ListId ';'                             (53)
	Stm -> Type Id '=' Exp ';'                         (54)
	Stm -> 'return' Exp ';'                            (55)
	Stm -> 'return' ';'                                (56)
	Stm -> 'while' '(' Exp ')' Stm                     (57)
	Stm -> 'for' '(' Stm Exp ';' Exp ')' Stm           (58)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (59)
	Stm -> '{' ListStm '}'                             (60)
	Stm -> 'if' '(' Exp ')' Stm                        (61)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (62)
	Stm -> Type Id '(' ListArg ')' '{' Stm '}'         (63)
	ListStm ->                                         (64)
	ListStm -> ListStm Stm                             (65)
	Type -> 'int'                                      (66)
	Type -> 'bool'                                     (67)
	Type -> 'void'                                     (68)
	Type -> 'char'                                     (69)
	Type -> 'double'                                   (70)
	Type -> QConst                                     (71)
	Type -> 'const' Type                               (72)
	Type -> 'typedef' Type                             (73)
	Type -> Type '&'                                   (74)
	ListType ->                                        (75)
	ListType -> Type                                   (76)
	ListType -> Type ',' ListType                      (77)
	QConst -> ListName                                 (78)
	Name -> Id                                         (79)
	Name -> Id '<' ListType '>'                        (80)
	ListName -> Name                                   (81)
	ListName -> Name '::' ListName                     (82)
	Exp16 -> 'true'                                    (83)
	Exp16 -> 'false'                                   (84)
	Exp16 -> Integer                                   (85)
	Exp16 -> Double                                    (86)
	Exp16 -> String                                    (87)
	Exp16 -> Char                                      (88)
	Exp16 -> QConst                                    (89)
	Exp16 -> '(' Exp ')'                               (90)
	Exp15 -> Exp15 '[' Exp11 ']'                       (91)
	Exp15 -> Exp16 '(' ListExp2 ')'                    (92)
	Exp15 -> Exp16                                     (93)
	Exp14 -> Exp14 '.' Exp15                           (94)
	Exp14 -> Exp15 '++'                                (95)
	Exp14 -> Exp15 '--'                                (96)
	Exp14 -> '*' Exp15                                 (97)
	Exp14 -> Exp14 '->' Exp15                          (98)
	Exp14 -> Exp15                                     (99)
	Exp13 -> '++' Exp14                                (100)
	Exp13 -> '--' Exp14                                (101)
	Exp13 -> '!' Exp14                                 (102)
	Exp13 -> Exp14                                     (103)
	Exp12 -> Exp12 '*' Exp13                           (104)
	Exp12 -> Exp12 '/' Exp13                           (105)
	Exp12 -> Exp12 '%' Exp13                           (106)
	Exp12 -> Exp13                                     (107)
	Exp11 -> Exp11 '+' Exp12                           (108)
	Exp11 -> Exp11 '-' Exp12                           (109)
	Exp11 -> Exp12                                     (110)
	Exp10 -> Exp10 '<<' ListExp11                      (111)
	Exp10 -> Exp10 '>>' Exp11                          (112)
	Exp10 -> Exp11                                     (113)
	Exp9 -> Exp9 '<' Exp10                             (114)
	Exp9 -> Exp9 '>' Exp10                             (115)
	Exp9 -> Exp9 '<=' Exp10                            (116)
	Exp9 -> Exp9 '>=' Exp10                            (117)
	Exp9 -> Exp10                                      (118)
	Exp8 -> Exp8 '==' Exp9                             (119)
	Exp8 -> Exp8 '!=' Exp9                             (120)
	Exp8 -> Exp9                                       (121)
	Exp4 -> Exp4 '&&' Exp5                             (122)
	Exp4 -> Exp5                                       (123)
	Exp3 -> Exp3 '||' Exp4                             (124)
	Exp3 -> Exp4                                       (125)
	Exp2 -> Exp2 '=' Exp3                              (126)
	Exp2 -> Exp2 '+=' Exp3                             (127)
	Exp2 -> Exp2 '-=' Exp3                             (128)
	Exp2 -> Exp2 '?' Exp2 ':' Exp2                     (129)
	Exp2 -> Exp3                                       (130)
	Exp1 -> 'throw' Exp2                               (131)
	Exp1 -> Exp2                                       (132)
	Exp -> Exp1                                        (133)
	Exp5 -> Exp6                                       (134)
	Exp6 -> Exp7                                       (135)
	Exp7 -> Exp8                                       (136)
	ListExp ->                                         (137)
	ListExp -> Exp                                     (138)
	ListExp -> Exp ',' ListExp                         (139)
	ListExp2 ->                                        (140)
	ListExp2 -> Exp2                                   (141)
	ListExp2 -> Exp2 ',' ListExp2                      (142)
	ListExp11 ->                                       (143)
	ListExp11 -> ListExp11 Exp11                       (144)
	ListId -> Id                                       (145)
	ListId -> Id ',' ListId                            (146)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'char'         { PT _ (TS _ 34) }
	'const'        { PT _ (TS _ 35) }
	'do'           { PT _ (TS _ 36) }
	'double'       { PT _ (TS _ 37) }
	'else'         { PT _ (TS _ 38) }
	'false'        { PT _ (TS _ 39) }
	'for'          { PT _ (TS _ 40) }
	'if'           { PT _ (TS _ 41) }
	'inline'       { PT _ (TS _ 42) }
	'int'          { PT _ (TS _ 43) }
	'main'         { PT _ (TS _ 44) }
	'return'       { PT _ (TS _ 45) }
	'throw'        { PT _ (TS _ 46) }
	'true'         { PT _ (TS _ 47) }
	'typedef'      { PT _ (TS _ 48) }
	'using'        { PT _ (TS _ 49) }
	'void'         { PT _ (TS _ 50) }
	'while'        { PT _ (TS _ 51) }
	'{'            { PT _ (TS _ 52) }
	'||'           { PT _ (TS _ 53) }
	'}'            { PT _ (TS _ 54) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_charac       { PT _ (TC $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pArg     rule  3
	%start_pListArg rule  4
	%start_pStm     rule  5
	%start_pListStm rule  6
	%start_pType    rule  7
	%start_pListType rule  8
	%start_pQConst  rule  9
	%start_pName    rule  10
	%start_pListName rule  11
	%start_pExp16   rule  12
	%start_pExp15   rule  13
	%start_pExp14   rule  14
	%start_pExp13   rule  15
	%start_pExp12   rule  16
	%start_pExp11   rule  17
	%start_pExp10   rule  18
	%start_pExp9    rule  19
	%start_pExp8    rule  20
	%start_pExp4    rule  21
	%start_pExp3    rule  22
	%start_pExp2    rule  23
	%start_pExp1    rule  24
	%start_pExp     rule  25
	%start_pExp5    rule  26
	%start_pExp6    rule  27
	%start_pExp7    rule  28
	%start_pListExp rule  29
	%start_pListExp2 rule  30
	%start_pListExp11 rule  31
	%start_pListId  rule  32
	Integer         rule  33
	Double          rule  34
	String          rule  35
	Char            rule  36
	Id              rule  37
	Program         rule  38
	Def             rules 39, 40, 41, 42, 43, 44, 45
	ListDef         rules 46, 47
	Arg             rule  48
	ListArg         rules 49, 50, 51
	Stm             rules 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63
	ListStm         rules 64, 65
	Type            rules 66, 67, 68, 69, 70, 71, 72, 73, 74
	ListType        rules 75, 76, 77
	QConst          rule  78
	Name            rules 79, 80
	ListName        rules 81, 82
	Exp16           rules 83, 84, 85, 86, 87, 88, 89, 90
	Exp15           rules 91, 92, 93
	Exp14           rules 94, 95, 96, 97, 98, 99
	Exp13           rules 100, 101, 102, 103
	Exp12           rules 104, 105, 106, 107
	Exp11           rules 108, 109, 110
	Exp10           rules 111, 112, 113
	Exp9            rules 114, 115, 116, 117, 118
	Exp8            rules 119, 120, 121
	Exp4            rules 122, 123
	Exp3            rules 124, 125
	Exp2            rules 126, 127, 128, 129, 130
	Exp1            rules 131, 132
	Exp             rule  133
	Exp5            rule  134
	Exp6            rule  135
	Exp7            rule  136
	ListExp         rules 137, 138, 139
	ListExp2        rules 140, 141, 142
	ListExp11       rules 143, 144
	ListId          rules 145, 146

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 46
	'char'         reduce using rule 46
	'const'        reduce using rule 46
	'double'       reduce using rule 46
	'inline'       reduce using rule 46
	'int'          reduce using rule 46
	'typedef'      reduce using rule 46
	'using'        reduce using rule 46
	'void'         reduce using rule 46
	L_Id           reduce using rule 46
	%eof           reduce using rule 46

	Program        goto state 129
	ListDef        goto state 130

State 1


	'bool'         shift, and enter state 101
	'char'         shift, and enter state 102
	'const'        shift, and enter state 103
	'double'       shift, and enter state 104
	'inline'       shift, and enter state 127
	'int'          shift, and enter state 105
	'typedef'      shift, and enter state 106
	'using'        shift, and enter state 128
	'void'         shift, and enter state 107
	L_Id           shift, and enter state 37

	Id             goto state 43
	Def            goto state 125
	Type           goto state 126
	QConst         goto state 100
	Name           goto state 45
	ListName       goto state 46

State 2


	'bool'         reduce using rule 46
	'char'         reduce using rule 46
	'const'        reduce using rule 46
	'double'       reduce using rule 46
	'inline'       reduce using rule 46
	'int'          reduce using rule 46
	'typedef'      reduce using rule 46
	'using'        reduce using rule 46
	'void'         reduce using rule 46
	L_Id           reduce using rule 46
	%eof           reduce using rule 46

	ListDef        goto state 124

State 3


	'bool'         shift, and enter state 101
	'char'         shift, and enter state 102
	'const'        shift, and enter state 103
	'double'       shift, and enter state 104
	'int'          shift, and enter state 105
	'typedef'      shift, and enter state 106
	'void'         shift, and enter state 107
	L_Id           shift, and enter state 37

	Id             goto state 43
	Arg            goto state 123
	Type           goto state 122
	QConst         goto state 100
	Name           goto state 45
	ListName       goto state 46

State 4


	'bool'         shift, and enter state 101
	'char'         shift, and enter state 102
	'const'        shift, and enter state 103
	'double'       shift, and enter state 104
	'int'          shift, and enter state 105
	'typedef'      shift, and enter state 106
	'void'         shift, and enter state 107
	L_Id           shift, and enter state 37
	%eof           reduce using rule 49

	Id             goto state 43
	Arg            goto state 120
	ListArg        goto state 121
	Type           goto state 122
	QConst         goto state 100
	Name           goto state 45
	ListName       goto state 46

State 5


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'bool'         shift, and enter state 101
	'char'         shift, and enter state 102
	'const'        shift, and enter state 103
	'do'           shift, and enter state 114
	'double'       shift, and enter state 104
	'false'        shift, and enter state 68
	'for'          shift, and enter state 115
	'if'           shift, and enter state 116
	'int'          shift, and enter state 105
	'return'       shift, and enter state 117
	'throw'        shift, and enter state 77
	'true'         shift, and enter state 69
	'typedef'      shift, and enter state 106
	'void'         shift, and enter state 107
	'while'        shift, and enter state 118
	'{'            shift, and enter state 119
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	Stm            goto state 110
	Type           goto state 111
	QConst         goto state 112
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp4           goto state 56
	Exp3           goto state 57
	Exp2           goto state 73
	Exp1           goto state 74
	Exp            goto state 113
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61

State 6


	'!'            reduce using rule 64
	'('            reduce using rule 64
	'*'            reduce using rule 64
	'++'           reduce using rule 64
	'--'           reduce using rule 64
	'bool'         reduce using rule 64
	'char'         reduce using rule 64
	'const'        reduce using rule 64
	'do'           reduce using rule 64
	'double'       reduce using rule 64
	'false'        reduce using rule 64
	'for'          reduce using rule 64
	'if'           reduce using rule 64
	'int'          reduce using rule 64
	'return'       reduce using rule 64
	'throw'        reduce using rule 64
	'true'         reduce using rule 64
	'typedef'      reduce using rule 64
	'void'         reduce using rule 64
	'while'        reduce using rule 64
	'{'            reduce using rule 64
	L_integ        reduce using rule 64
	L_doubl        reduce using rule 64
	L_quoted       reduce using rule 64
	L_charac       reduce using rule 64
	L_Id           reduce using rule 64
	%eof           reduce using rule 64

	ListStm        goto state 109

State 7


	'bool'         shift, and enter state 101
	'char'         shift, and enter state 102
	'const'        shift, and enter state 103
	'double'       shift, and enter state 104
	'int'          shift, and enter state 105
	'typedef'      shift, and enter state 106
	'void'         shift, and enter state 107
	L_Id           shift, and enter state 37

	Id             goto state 43
	Type           goto state 108
	QConst         goto state 100
	Name           goto state 45
	ListName       goto state 46

State 8


	'bool'         shift, and enter state 101
	'char'         shift, and enter state 102
	'const'        shift, and enter state 103
	'double'       shift, and enter state 104
	'int'          shift, and enter state 105
	'typedef'      shift, and enter state 106
	'void'         shift, and enter state 107
	L_Id           shift, and enter state 37
	%eof           reduce using rule 75

	Id             goto state 43
	Type           goto state 98
	ListType       goto state 99
	QConst         goto state 100
	Name           goto state 45
	ListName       goto state 46

State 9


	L_Id           shift, and enter state 37

	Id             goto state 43
	QConst         goto state 97
	Name           goto state 45
	ListName       goto state 46

State 10


	L_Id           shift, and enter state 37

	Id             goto state 43
	Name           goto state 96

State 11


	L_Id           shift, and enter state 37

	Id             goto state 43
	Name           goto state 45
	ListName       goto state 95

State 12


	'('            shift, and enter state 64
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 94

State 13


	'('            shift, and enter state 64
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 93

State 14


	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 92

State 15


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 91

State 16


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 90

State 17


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 89

State 18


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 88

State 19


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 87

State 20


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 86

State 21


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp4           goto state 85
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61

State 22


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp4           goto state 56
	Exp3           goto state 84
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61

State 23


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp4           goto state 56
	Exp3           goto state 57
	Exp2           goto state 83
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61

State 24


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'throw'        shift, and enter state 77
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp4           goto state 56
	Exp3           goto state 57
	Exp2           goto state 73
	Exp1           goto state 82
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61

State 25


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'throw'        shift, and enter state 77
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp4           goto state 56
	Exp3           goto state 57
	Exp2           goto state 73
	Exp1           goto state 74
	Exp            goto state 81
	Exp5           goto state 59
	Exp6           goto state 60
	Exp7           goto state 61

State 26


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp5           goto state 80
	Exp6           goto state 60
	Exp7           goto state 61

State 27


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37

	Integer        goto state 39
	Double         goto state 40
	String         goto state 41
	Char           goto state 42
	Id             goto state 43
	QConst         goto state 44
	Name           goto state 45
	ListName       goto state 46
	Exp16          goto state 47
	Exp15          goto state 48
	Exp14          goto state 49
	Exp13          goto state 50
	Exp12          goto state 51
	Exp11          goto state 52
	Exp10          goto state 53
	Exp9           goto state 54
	Exp8           goto state 55
	Exp6           goto state 79
	Exp7           goto state 61

State 28


	'!'            shift, and enter state 63
	'('            shift, and enter state 64
	'*'            shift, and enter state 65
	'++'           shift, and enter state 66
	'--'           shift, and enter state 67
	'false'        shift, and enter state 68
	'true'         shift, and enter state 69
	L_integ        shift, and enter state 34
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 71
	L_charac       shift, and enter state 72
	L_Id           shift, and enter state 37
